# el-uber

./: .gitignore  .replit  META_PIXELS_SETUP.md  advanced_protection.py  analytics.py  app.py  build_css.py  cache_manager.py  comprehensive_cras_loader.py  cookies.txt  cras_data_loader.py  database_service.py  deploy_heroku.sh  enterprise_scaling.py  fast_cras_loader.py  finalizar.py  google_places_medical.py  health_monitor.py  heroku_optimizer.py  high_concurrency_optimizer.py  main.py  medical_clinic_api.py  meta_pixels.py  minimal_config.py  mobile_protection.py  mobile_protection_advanced.py  models.py  openai_service.py  optimized_cras_loader.py  package-lock.json  package.json  payments.py  performance_optimizer.py  pyproject.toml  rate_limiter.py  real_clinic_search.py  real_medical_clinics_db.py  reliable_cras_data.py  replit.md  requirements_deploy.txt  (+8 more)
attached_assets/: Pasted--Application-Logs-2025-06-03T13-02-20-750174-00-00-app-web-83-INFO-werkzeug-33mPress-CTRL-C-to-q-1748955857337.txt  Pasted--Building-on-the-Heroku-24-stack-Determining-which-buildpack-to-use-for-this-app--1742481680166.txt  Pasted--Building-on-the-Heroku-24-stack-Determining-which-buildpack-to-use-for-this-app--1742482092252.txt  Pasted--Building-on-the-Heroku-24-stack-Determining-which-buildpack-to-use-for-this-app--1742482512196.txt  Pasted--Building-on-the-Heroku-24-stack-Determining-which-buildpack-to-use-for-this-app--1748952157679.txt  Pasted--Building-on-the-Heroku-24-stack-Using-buildpack-heroku-python-Python-app-detec-1750776737303_1750776737304.txt  index.html  result.html  (+30 more)
(+31 files in other folders)
