[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.1.0.post1",
    "flask==3.0.2",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
    "requests==2.31.0",
    "sqlalchemy==2.0.28",
    "twilio==9.5.1",
]
